# nightfall

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  cabal.project  default.nix  nightfall.cabal  shell.nix
.reuse/: dep5
app/: Main.hs
nix/: cabal-multi-repl.nix  defaults.nix  pkgs.nix  project.nix
scripts/: hoogle  repl  run  test  watch
src/: Nightfall.hs
src/Examples/: Cond.hs  Fib.hs  Fun.hs  Inputs.hs  Loops.hs  Simple.hs  collatz_secrets.inputs  simple_secrets.inputs
src/Nightfall/: Alphabet.hs  MASM.hs  Prelude.hs
src/Nightfall/Lang/: Types.hs
src/Nightfall/Lang/Internal/: Felt.hs  Types.hs
src/Nightfall/Lang/Syntax/: Default.hs  DotRecord.hs
src/Nightfall/MASM/: Callgraph.hs  Integral.hs  Miden.hs  Types.hs
src/Nightfall/Targets/: Miden.hs
test/: Evaluation.hs  Main.hs
test/golden/: FixedCollatz(10)  FixedCollatz(10).mres  FixedCollatz10.masm  Ifwithvars.masm  Ifwithvars.mres  Sumto10.masm  Sumto10.mres  collatzprivate  collatzprivate.masm  collatzprivate.mres  secret.inputs  simpleif.masm  simpleinf.masm  simpleinf.mres  simpleinitArray.masm  simpleinitArray.mres  simplenat.masm  simplenat.mres  simplesecret.masm  simplesecret.mres  simplevar1  simplevar1.mres  simplevar2  simplevar2.mres  simplevar3.masm  simplevar3.mres  trivial1.masm  trivial1.mres  trivial2.masm  trivial2.mres  trivial3.masm  trivial3.mres  trivial4.masm  trivial4.mres
