cabal-version:      3.0
name:               nightfall
version:            0.1
-- synopsis:
-- description:
homepage:           https://github.com/qredo/nightfall
license:            Apache-2.0
license-file:       LICENSE
author:             Qredo
maintainer:         info@qredo.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

common dev-flags
    if impl(ghc >= 9.6)
        ghc-options: -fwrite-if-simplified-core

library
    import:           warnings
    import:           dev-flags
    exposed-modules:  Nightfall,
                      Nightfall.MASM,
                      Nightfall.MASM.Callgraph,
                      Nightfall.MASM.Miden,
                      Nightfall.MASM.Types
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16 && <5, containers, directory, dlist, filepath, mtl, process, temporary, text
    hs-source-dirs:   src
    default-language: Haskell2010


test-suite nightfall-test
    import:           warnings
    import:           dev-flags
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.16 && <5,
        nightfall
